<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ephemvpn</string>
    <string name="loading">ephemvpn running...</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="title_settings">Settings</string>
    <string name="title_summon">Summon</string>
    
    <string name="pref_aws_api">AWS API Key</string>
    <string name="pref_aws_api_sum">Your API key from AWS</string>
    <string name="pref_aws_secret">AWS Secret Key</string>
    <string name="pref_aws_secret_sum">Your secret key from AWS</string>
    <string name="pref_aws_key_file">AWS Key Name</string>
    <string name="pref_aws_key_file_sum">The name of the keypair to use</string>
    <string name="pref_running_time">VPN Running Time</string>
    <string name="pref_running_time_sum">How long the VPN should run</string>
    
    <string-array name="empty_array"/>

</resources>